Fix #34 name visible in 7WArchitects
Make the player names readable under the wonders in 7 Wonders Architects

--- a/src/games/sevenwondersarchitects.scss
+++ b/src/games/sevenwondersarchitects.scss
@@ -6,4 +6,7 @@
 	.stwbattleicon {
 		color: black;
 	}
+	.stw_name_holder {
+		color: white;
+	}
 }
